--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Dosis:wght@300;400&family=Indie+Flower&family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <script src="music.js"></script>
   </head>
   <body>
     <div class="player">
@@ -17,7 +18,7 @@
         <i class="fa-solid fa-shuffle"></i>
       </button>
 
-      <button class="play">
+      <button onclick="play()" id="play" class="play">
         <i class="fa-solid fa-play"></i>
       </button>
 
@@ -27,11 +28,17 @@
     </div>
     <div class="bottom">
       <p id="sName">Song Name</p>
+      <input type="range" min="1" max="100" value="50" class="slider" id="sSlider">
       <p id="sDur">0:00 / 0:00</p>
     </div>
     </div>
     <hr>
     <div id="sList">
+      <div style="display: flex; flex-direction: row;">
+        <input type="text" placeholder="Song Link">
+        <button><i class="fa-solid fa-download"></i></button>
+        <button><i class="fa-solid fa-arrow-rotate-right"></i></button>
+      </div>
     </div>
   </body>
 </html>
