full working app

--- a/src/index.html
+++ b/src/index.html
@@ -33,12 +33,12 @@
     </div>
     </div>
     <hr>
+    <div class="controls" style="display: flex; flex-direction: row;">
+      <input id="sLink" type="text" placeholder="Song Link">
+      <button onclick="downloadSong()"><i class="fa-solid fa-download"></i></button>
+      <button onclick="reloadSongs()"><i class="fa-solid fa-arrow-rotate-right"></i></button>
+    </div>
     <div id="sList">
-      <div style="display: flex; flex-direction: row;">
-        <input type="text" placeholder="Song Link">
-        <button><i class="fa-solid fa-download"></i></button>
-        <button><i class="fa-solid fa-arrow-rotate-right"></i></button>
-      </div>
     </div>
   </body>
 </html>
