loop system complete

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         <i class="fa-solid fa-play"></i>
       </button>
 
-      <button>
+      <button id="loop" onclick="loop()">
         <i class="fa-solid fa-repeat"></i>
       </button>
     </div>
