all functions done

--- a/src/index.html
+++ b/src/index.html
@@ -42,8 +42,7 @@
     </div>
 
     <div class="statusBar">
-      <p><i class="fa-solid fa-circle-chevron-right"></i></p>
-      <p id="status"></p>
+      <p id="status">Status Displayed Here in realtime</p>
     </div>
   </body>
 </html>
